// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EbayToggleButton /> should render component - <Default /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="toggle-button toggle-button--minimal-layout"
  >
    <div
      class="toggle-button__content"
    >
      <p
        class="toggle-button__title"
      >
        Button 1
      </p>
      <p
        class="toggle-button__subtitle"
      >
        subtitle
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<EbayToggleButton /> should render component - <IconButton /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="toggle-button toggle-button--minimal-layout"
  >
    <div
      class="toggle-button__icon"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings-24"
        />
      </svg>
    </div>
    <div
      class="toggle-button__content"
    >
      <p
        class="toggle-button__title"
      >
        Button 1
      </p>
      <p
        class="toggle-button__subtitle"
      >
        Some context here
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<EbayToggleButton /> should render component - <ImageButton /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="toggle-button toggle-button--minimal-layout"
  >
    <span
      class="toggle-button__image-container"
    >
      <span
        class="toggle-button__image"
      >
        <img
          alt="image alt"
          src="https://cloudfront.slrlounge.com/wp-content/uploads/2012/07/01-SLRLounge-Holding-Standing-Wrong.jpg"
        />
      </span>
    </span>
    <div
      class="toggle-button__content"
    >
      <p
        class="toggle-button__title"
      >
        Button 1
      </p>
      <p
        class="toggle-button__subtitle"
      >
        Some context here
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<EbayToggleButton /> should render component - <ImageButtonWithPlacement /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="toggle-button toggle-button--gallery-layout"
  >
    <span
      class="toggle-button__image-container"
    >
      <span
        aria-label="image alt"
        class="toggle-button__image"
        role="img"
        style="background-image: url(https://cloudfront.slrlounge.com/wp-content/uploads/2012/07/01-SLRLounge-Holding-Standing-Wrong.jpg); background-position: top; background-size: cover; background-repeat: no-repeat;"
      />
    </span>
    <div
      class="toggle-button__content"
    >
      <p
        class="toggle-button__title"
      >
        Button 1
      </p>
      <p
        class="toggle-button__subtitle"
      >
        Some context here
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<EbayToggleButton /> should render component - <WithChildren /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="toggle-button toggle-button--minimal-layout"
  >
    <div
      class="toggle-button__content"
    >
      <p>
        Button 1
      </p>
    </div>
  </button>
</DocumentFragment>
`;
